Opened 13 years ago

Closed 13 years ago

Last modified 13 years ago

#2666 closed defect (fixed)

Subtitles broken with ffplay

Reported by: Carl Eugen Hoyos Owned by: Marton Balint
Priority: important Component: ffplay
Version: git-master Keywords: dvbsub
Cc: cus@passwd.hu Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: yes

Description (last modified by Carl Eugen Hoyos)

(Found when testing http://thread.gmane.org/gmane.comp.video.ffmpeg.user/46146)
Subtitles (I only tested dvbsub) are not shown anymore by ffplay since f2175a6 or only one line of subtitles is shown and never disappears.
This may or may not be related to another bug: If I seek back (at least in the sample I am testing), the subtitles that were shown before are never shown again, only newer (later) ones will be shown when playback reaches the position again. This is not a regression afaict, only reproducible with older version for the short sample I will attach.

$ ffplay -t 7.3 out.m2t
ffplay version N-53987-g443b29e Copyright (c) 2003-2013 the FFmpeg developers
  built on Jun 13 2013 02:33:40 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 35.101 / 52. 35.101
  libavcodec     55. 16.100 / 55. 16.100
  libavformat    55.  8.102 / 55.  8.102
  libavdevice    55.  2.100 / 55.  2.100
  libavfilter     3. 76.101 /  3. 76.101
  libswscale      2.  3.100 /  2.  3.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  3.100 / 52.  3.100
Invalid frame dimensions 0x0.q=    0KB vq=    0KB sq=    0B f=0/0
[mpeg2video @ 0x7f8ebc0049e0] Invalid frame dimensions 0x0.
    Last message repeated 2 times
[mpegts @ 0x7f8ebc000920] max_analyze_duration 5000000 reached at 5016000 microseconds
[mpegts @ 0x7f8ebc000920] PES packet size mismatch
    Last message repeated 1 times
Input #0, mpegts, from 'out.m2t':
  Duration: 00:00:09.17, start: 53328.302833, bitrate: 2234 kb/s
  Program 1000
    Stream #0:0[0x208]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p, 720x576 [SAR 64:45 DAR 16:9], 25 fps, 25 tbr, 90k tbn, 50 tbc
    Stream #0:1[0x212](fra): Audio: mp2 ([4][0][0][0] / 0x0004), 48000 Hz, stereo, s16p, 192 kb/s
    Stream #0:2[0x213](deu): Audio: mp2 ([4][0][0][0] / 0x0004), 48000 Hz, stereo, s16p, 192 kb/s
    Stream #0:3[0x21c](fra): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)
    Stream #0:4[0x21d](deu): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)
    Stream #0:5[0x21e](fra): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006) (hearing impaired)
[mpegts @ 0x7f8ebc000920] PES packet size mismatch
53338.54 A-V:  0.088 fd=   1 aq=    0KB vq=    0KB sq=    0B f=0/1

Two different subtitles are supposed to be shown, works fine with all tested releases.

Attachments (2)

out.m2t (2.4 MB ) - added by Carl Eugen Hoyos 13 years ago.
subtitle-fix.patch (3.6 KB ) - added by Marton Balint 13 years ago.
Fix subtitle issues on seek

Change History (8)

comment:1 by Carl Eugen Hoyos, 13 years ago

Description: modified (diff)

by Carl Eugen Hoyos, 13 years ago

Attachment: out.m2t added

comment:2 by Marton Balint, 13 years ago

Analyzed by developer: set
Owner: set to Marton Balint
Reproduced by developer: set
Status: newopen

by Marton Balint, 13 years ago

Attachment: subtitle-fix.patch added

Fix subtitle issues on seek

comment:3 by Marton Balint, 13 years ago

Cc: cus@passwd.hu added

I've sent a patch to ffmpeg-devel to fix the regression.

I've also uploaded a patch here, which should fix the other issue with the subtitles you reported here. Colud you please test it? The patch has to be applied on top of the patch I sent to ffmpeg-devel.

comment:4 by Carl Eugen Hoyos, 13 years ago

The regression is fixed by your patch on ffmpeg-devel

The issue with seeking back is fixed by the patch attached here, sorry for the bad report!

comment:5 by Carl Eugen Hoyos, 13 years ago

Resolution: fixed
Status: openclosed

The original issue was fixed by Marton.

Note: See TracTickets for help on using tickets.