ffplay: fix missed conversion of video_current_pts to vidclk.pts in subtitles

Fixes regression with subtitles introduced in f2175a6.
Fixes ticket #2666.

Signed-off-by: Marton Balint <cus@passwd.hu>